# OnRabbleClient

./: .gitignore  AuthUtils.js  CMakeLists.txt  ChatUtils.js  Main.qml  README.md  index.qdoc  main.cpp  onrabble.qdocconf
auth/: authcore.cpp  authcore.h  authmanager.cpp  authmanager.h
chat/: channelmessageproxymodel.cpp  channelmessageproxymodel.h  channelmodel.cpp  channelmodel.h  channelpayload.cpp  channelpayload.h  channelpayloadmodel.cpp  channelpayloadmodel.h  channelproxymodel.cpp  channelproxymodel.h  chatchannelpayload.cpp  chatchannelpayload.h  chatchannelpayloadmodel.cpp  chatchannelpayloadmodel.h  chatclientmanager.cpp  chatclientmanager.h  chatmessagemodel.cpp  chatmessagemodel.h  chatmessagepayload.cpp  chatmessagepayload.h  chatservermodel.cpp  chatservermodel.h  privatechatmessagemodel.cpp  privatechatmessagemodel.h  privatechatmessagepayload.cpp  privatechatmessagepayload.h  privatechatmessageproxymodel.cpp  privatechatmessageproxymodel.h  privatemessagemodel.cpp  privatemessagemodel.h  privatemessageproxymodel.cpp  privatemessageproxymodel.h
client/: clientmanager.cpp  clientmanager.h  clientuserpayload.cpp  clientuserpayload.h
discovery/: discoverycore.cpp  discoverycore.h  discoverymanager.cpp  discoverymanager.h  discoverymodel.cpp  discoverymodel.h  discoverypayload.cpp  discoverypayload.h  discoverypayloadlistmodel.cpp  discoverypayloadlistmodel.h
docs/: authenticationflow.qdoc  clientguide.qdoc  connectionflow.qdoc  discoveryflow.qdoc  gettingstarted.qdoc  index.qdoc  keyprocesses.qdoc  messageflow.qdoc  models.qdoc  onrabble.qdocconf  payloads.qdoc  qmlpages.qdoc
docs/scripts/: main.js
docs/styles/: base.css  style.css  styles.css
docs/templates/: navbar.html  sidebar.html
messages/: messagebroker.cpp  messagebroker.h
messages/payloads/: channelpayload.cpp  chatmessagepayload.h  discoverypayload.cpp  discoverypayload.h  privatechatmessagepayload.cpp
messages/payloads/chat/: chatmessagepayload.cpp  privatechatmessagepayload.cpp  privatechatmessagepayload.h  privatemessagepayload.cpp  privatemessagepayload.h
messages/payloads/system/: channelpayload.cpp  channelpayload.h  clientuserpayload.cpp  clientuserpayload.h  discoverypayload.cpp  discoverypayload.h  userstatuspayload.cpp  userstatuspayload.h
qml/: AuthBrowserPage.qml  ChatWindow.qml  DiscoveryPage.qml
qml/auth/: AuthBrowserPage.qml  utils.js
qml/auth/components/: AuthHeader.qml
qml/chat/: ChatErrorPage.qml  ChatPage.qml  ChatWindow.qml
qml/chat/components/: ChatInput.qml  ChatMessageView.qml  ChatPageFooter.qml  ChatSidePanel.qml  ChatView.qml  PrivateChatView.qml
qml/discovery/: DiscoveryPage.qml  RecentServersSelection.qml  ServerListItem.qml
qml/discovery/components/: DiscoveryHeader.qml  RecentServersSelection.qml  ServerListItem.qml
qml/icons/: CrossCircledIcon.qml  MagnifyingGlassIcon.qml  PlusIcon.qml
qml/ui/buttons/: DangerButton.qml  PrimaryButton.qml
qml/ui/icons/: ChatIcon.qml  DangerIcon.qml  GlobeIcon.qml  LockOpenIcon.qml  PersonIcon.qml  SendIcon.qml
store/: discoverystoremanager.cpp  discoverystoremanager.h
system/: theme.cpp  theme.h  thememanager.cpp  thememanager.h
theme/: colorpalette.cpp  colorpalette.h  theme.cpp  theme.h  thememanager.cpp  thememanager.h
user/: userstatusmodel.cpp  userstatusmodel.h  userstatuspayload.cpp  userstatuspayload.h
websocket/: websocketmanager.cpp  websocketmanager.h
